# music-frog

./: Cargo.toml  DEFECTS.md  README.md  TESTING.md  USAGE_SPEC.md  iced_todo.md  package.json
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/musicfrog/despicableinfiltrator/: InfiltratorTileService.kt  MainActivity.kt  MihomoHost.kt  MihomoVpnService.kt
android/app/src/main/java/com/musicfrog/despicableinfiltrator/ui/: App.kt
android/app/src/main/java/com/musicfrog/despicableinfiltrator/ui/common/: Dialogs.kt
android/app/src/main/java/com/musicfrog/despicableinfiltrator/ui/connections/: ConnectionsScreen.kt  ConnectionsViewModel.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-zh-rCN/: strings.xml
android/app/src/main/res/values-zh-rTW/: strings.xml
crates/infiltrator-admin/: Cargo.toml
crates/infiltrator-admin/src/: admin_api.rs  lib.rs  scheduler.rs  servers.rs
crates/infiltrator-admin/src/admin_api/: admin_api_test.rs  events.rs  handlers.rs  handlers_test.rs  models.rs  state.rs
crates/infiltrator-admin/src/scheduler/: subscription.rs  subscription_test.rs  sync.rs
crates/infiltrator-admin/src/scheduler/sync/: sync_test.rs
crates/infiltrator-android/: Cargo.toml
crates/infiltrator-android/src/: api.rs  ffi.rs  infiltrator_android.udl  jni_bridge.rs  lib.rs  runtime.rs  uniffi_api.rs
crates/infiltrator-core/: Cargo.toml
crates/infiltrator-core/src/: app_routing.rs  dns.rs  error.rs  fake_ip.rs  lib.rs  profiles.rs  proxy_providers.rs  rules.rs  settings.rs  sniffer.rs  subscription.rs  tun.rs
crates/infiltrator-desktop/src/: editor.rs  proxy.rs  runtime.rs  service.rs  version.rs
crates/infiltrator-http/: Cargo.toml
crates/infiltrator-iced/: Cargo.toml
crates/infiltrator-iced/src/: app.rs  autostart.rs  locales.rs  main.rs  state.rs  subscription.rs  tests.rs  tray.rs  types.rs  update.rs  utils.rs  view.rs  view_root.rs
crates/infiltrator-iced/src/update/: core.rs  mod.rs  profile.rs  ui.rs
crates/infiltrator-iced/src/view/: components.rs  dns.rs  editor.rs  icons.rs  mod.rs  overview.rs  profiles.rs  proxies.rs  rules.rs  runtime.rs  settings.rs  sidebar.rs  sync.rs
crates/mihomo-api/src/: client.rs  lib.rs  proxy.rs  types.rs
crates/mihomo-api/src/connection/: manager.rs
crates/mihomo-api/src/proxy/: manager.rs  test.rs  types.rs  types_test.rs
crates/mihomo-config/src/: lib.rs  manager.rs  profile.rs  yaml.rs
crates/mihomo-dav-sync/dav-client/src/: client.rs  lib.rs  xml_parser.rs
crates/mihomo-dav-sync/indexer/src/: lib.rs
crates/mihomo-dav-sync/state-store/src/: lib.rs
crates/mihomo-dav-sync/sync-engine/: Cargo.toml
crates/mihomo-dav-sync/sync-engine/src/: executor.rs  lib.rs
crates/mihomo-dav-sync/sync-engine/src/executor/: executor_test.rs
crates/mihomo-platform/src/: android.rs  android_bridge.rs  desktop.rs  lib.rs  paths.rs
crates/mihomo-version/: Cargo.toml
crates/mihomo-version/src/: download.rs  manager.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: admin_context.rs  app_state.rs  core_update.rs  frontend.rs  locales.rs  main.rs  paths.rs  platform.rs  runtime.rs  settings.rs  system_proxy.rs  tray.rs  utils.rs
src-tauri/src/tray/: handlers.rs  menu.rs  menu_test.rs
webui/config-manager-ui/: package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
webui/config-manager-ui/src/: App.vue  api.ts  styles.css  types.ts
webui/config-manager-ui/src/__tests__/: api.test.ts
webui/config-manager-ui/src/components/: CorePanel.vue  FormSwitch.vue  RulesPanel.vue  RuntimePanel.vue
webui/config-manager-ui/src/components/__tests__/: CorePanel.test.ts  DnsPanel.test.ts  FakeIpPanel.test.ts  ProfilesPanel.test.ts  RulesPanel.test.ts  SyncSettingsPanel.test.ts  TunPanel.test.ts
webui/config-manager-ui/src/composables/: useAdvancedSettings.ts  useCoreManager.ts  useRuntimeManager.ts
webui/config-manager-ui/src/composables/__tests__/: useCoreManager.test.ts
webui/config-manager-ui/src/locales/: en-US.json  zh-CN.json
webui/config-manager-ui/src/test-utils/: i18n.ts
(+16 files in other folders)
