[package]
name = "infiltrator-iced"
version = "0.12.21"
edition = "2024"

[dependencies]
iced = { version = "0.14", default-features = false, features = ["tokio", "advanced", "tiny-skia", "canvas"] }
tokio = { workspace = true }
infiltrator-core = { path = "../infiltrator-core" }
infiltrator-desktop = { path = "../infiltrator-desktop" }
mihomo-version = { path = "../mihomo-version" }
mihomo-api = { path = "../mihomo-api" }
mihomo-config = { path = "../mihomo-config" }
mihomo-platform = { path = "../mihomo-platform" }
dav-client = { path = "../mihomo-dav-sync/dav-client" }
tracing = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["rustls"] }
sys-locale = "0.3"
tray-icon = "0.19"
muda = "0.15"
image = "0.25"
single-instance = "0.3"
is_elevated = "0.1"
serde_yml = "0.0.12"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[package.metadata.packager]
product-name = "MusicFrog Infiltrator"
identifier = "com.musicfrog.infiltrator"
version = "0.12.21"
authors = ["MusicFrog"]
description = "A native high-performance proxy client."
icons = ["../../src-tauri/icons/icon.png"]
resources = ["../../vendor/mihomo.exe"]

[package.metadata.packager.wix]
languages = ["zh-CN"]



